# Clusterer

./: .gitignore  AccessList.txt  CMakeLists.txt  Doxyfile  LICENSE  README.md  ReadMe.txt  Specification Changes.txt  main.cpp  mainGraph.cpp  mainGraphReader2.cpp  main_old.cpp  trello.txt
Qt_project/graph/: frontendconfig.cpp  frontendconfig.h  graph.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.ui
cmake/modules/: FindCppUnit.cmake
homework/: 0505-Denis and Dinesh.txt  0505-Kiril and Radu.txt  0505_Valentin_and_Annu  2014-Kiril and Radu.txt  2104-Denis and Dinesh.txt  2104-Kiril and Radu.txt  2104-Valentin and Annu.txt
include/: AbstractGraph.hpp  AbstractGraphReader.hpp  ClusterEncoder.hpp  ClusterEncoding.hpp  ClusterRefiner.hpp  ClustererMenuBar.hpp  ClustererWindow.hpp  ClusteringParams.hpp  ClusteringPopulationAnalyzer.hpp  ClusteringPopulationRefiner.hpp  ClusteringPopulationSelector.hpp  ClusteringService.hpp  ClusteringSolutionAnalyzer.hpp  ClusterwiseCrossoverEngine.hpp  CombinedCrossoverEngine.hpp  CombinedMutation.hpp  ConcurrentLockingQueue.hpp  ConfigurationManager.hpp  ConfigurationReaderWriter.hpp  CoverageAnalyzer.hpp  CrossoverEngine.hpp  ErrorLogger.hpp  ExplorationCrossover.hpp  ExplorationJoin.hpp  ExplorationMutation.hpp  ExplorationSplit.hpp  FitnessAnalyzer.hpp  FlagParser.hpp  FrontendConfig.h  GUIFitnessPlot.hpp  GUINodePlotter.hpp  GeneticGui.hpp  GeneticStrategy.hpp  GlobalBackendController.hpp  GlobalFileLogger.hpp  Graph.hpp  GraphCoordinateTransformer.hpp  GraphExporter.hpp  GraphReader.hpp  GraphReader2.hpp  (+36 more)
src/: AbstractGraph.cpp  AbstractGraphReader.cpp  ClusterEncoder.cpp  ClusterEncoding.cpp  ClusterRefiner.cpp  ClustererMenuBar.cpp  ClusteringService.cpp  ClusteringSolutionAnalyzer.cpp  ClusterwiseCrossoverEngine.cpp  CombinedCrossoverEngine.cpp  CombinedMutation.cpp  ComputeWeightForMovieLens.cpp  ConfigurationManager.cpp  ConfigurationReaderWriter.cpp  CoverageAnalyzer.cpp  CrossoverEngine.cpp  ErrorLogger.cpp  ExplorationJoin.cpp  ExplorationMutation.cpp  ExplorationSplit.cpp  FitnessAnalyzer.cpp  FlagParser.cpp  FrontendConfig.cpp  GUIFitnessPlot.cpp  GUINodePlotter.cpp  GeneticGui.cpp  GeneticStrategy.cpp  GlobalBackendController.cpp  GlobalFileLogger.cpp  Graph.cpp  GraphCoordinateTransformer.cpp  GraphExporter.cpp  GraphReader.cpp  GraphReader2.cpp  IntegerEncodingInitializer.cpp  IntegerVectorEncoder.cpp  IntegerVectorEncoding.cpp  JSONGraphReader.cpp  LoggerSeverityLevel.cpp  LoggerSeverityType.cpp  (+25 more)
temp/: ClusteringParams.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  ConfigurationReaderWriter.cpp  ConfigurationReaderWriter.hpp  TestConfigurationReaderWriter.cpp  TestConfigurationReaderWriter.hpp
test/: TestClusterRefiner.cpp  TestClusterRefiner.hpp  TestClusteringPopulationAnalyzer.cpp  TestClusteringPopulationAnalyzer.hpp  TestClusterwiseCrossoverEngine.cpp  TestClusterwiseCrossoverEngine.hpp  TestConcurrentLockingQueue.cpp  TestConcurrentLockingQueue.hpp  TestConfigurationManager.cpp  TestConfigurationManager.hpp  TestConfigurationReaderWriter.cpp  TestConfigurationReaderWriter.hpp  TestCoverageAnalyzer.cpp  TestCoverageAnalyzer.hpp  TestErrorLogger.cpp  TestErrorLogger.hpp  TestExplorationMutation.cpp  TestExplorationMutation.hpp  TestFitnessAnalyzer.cpp  TestFitnessAnalyzer.hpp  TestFlagParser.cpp  TestFlagParser.hpp  TestGeneticGui.cpp  TestGeneticGui.hpp  TestGraph.cpp  TestGraph.hpp  TestGraphCoordinateTransformer.cpp  TestGraphCoordinateTransformer.hpp  TestGraphReader.cpp  TestGraphReader.hpp  TestIntegerEncodingInitializer.cpp  TestIntegerEncodingInitializer.hpp  TestIntegerVectorEncoding.cpp  TestIntegerVectorEncoding.hpp  TestJSONGraphReader.cpp  TestJSONGraphReader.hpp  TestLogger.cpp  TestLogger.hpp  TestLoggerBufferEntry.cpp  TestLoggerBufferEntry.hpp  (+51 more)
test_files/: Graph.txt  Graph1.txt  Graph2.txt
